--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">Poluição<em><span class="span1">M</span></em><em><span class="span2">T</span></em></div>
+        <a href="index.html" class="retorno"><div class="logo">Poluição<em><span class="span1">B</span></em><em><span class="span2">R</span></em></div></a>
         <nav class="navegacao">
             <ul class="center1">
                 <li><a href="index.html">Início</a></li>
@@ -66,8 +66,6 @@
 
 
     <section class="hero">
-        <h1 class="escondido">Poluição</h1>
-        <p class="escondido">PROJETO INTEGRADOR SENAC</p>
         <div class="image-container">
             <img src="img/imagem1.png" class="image active">
             <img src="img/imagem2.png" class="image">
