--- a/desastres.html
+++ b/desastres.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">Poluição<em><span class="span1">M</span></em><em><span class="span2">T</span></em></div>
+        <a href="index.html" class="retorno"><div class="logo">Poluição<em><span class="span1">B</span></em><em><span class="span2">R</span></em></div></a>
         <nav class="navegacao">
             <ul class="center1">
                 <li><a href="index.html">Início</a></li>
